--- a/man/s3virge.man
+++ b/man/s3virge.man
@@ -20,7 +20,7 @@ s3virge \- S3 ViRGE video driver
 .B EndSection
 .SH DESCRIPTION
 .B s3virge 
-is an __xservername_ driver for S3 based video cards.  The driver is fully
+is an __xservername__ driver for S3 based video cards.  The driver is fully
 accelerated, and provides support for the following framebuffer depths:
 8, 15, 16, and 24.  All
 visual types are supported for depth 8, and TrueColor
