--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/s3v_driver.c:
+	Bump to 1.9.1 for Xv changes.
+
 2006-04-07  Aaron Plattner  <aplattner@nvidia.com>
 
 	* src/s3v_xv.c:
