--- a/man/s3virge.man
+++ b/man/s3virge.man
@@ -20,7 +20,7 @@ s3virge \- S3 ViRGE video driver
 .B EndSection
 .SH DESCRIPTION
 .B s3virge 
-is an XFree86 driver for S3 based video cards.  The driver is fully
+is an __xservername__ driver for S3 based video cards.  The driver is fully
 accelerated, and provides support for the following framebuffer depths:
 8, 15, 16, and 24.  All
 visual types are supported for depth 8, and TrueColor
@@ -61,7 +61,7 @@ driver supports PCI and AGP video cards based on the following S3 chips:
 .B Trio 3D/2X
 86C362, 86C368
 .SH CONFIGURATION DETAILS
-Please refer to XF86Config(__filemansuffix__) for general configuration
+Please refer to __xconfigfile__(__filemansuffix__) for general configuration
 details.  This section only covers configuration details specific to this
 driver.  All options names are case and white space insensitive when
 parsed by the server, for example,  "virge vx" and "VIRGEvx" are equivalent.
@@ -221,7 +221,7 @@ development debug option.  Default: off.
 Enable or disable a cr3a fix added for ViRGE MX.  Default: on.
 
 .SH SEE ALSO
-XFree86(1), XF86Config(__filemansuffix__), xf86config(1), Xserver(1), X(__miscmansuffix__)
+__xservername__(1), __xconfigfile__(__filemansuffix__), xorgconfig(1), Xserver(1), X(__miscmansuffix__)
 
 .SH KNOWN BUGS
 The VideoRam generic driver parameter is presently ignored by the
